ANTLR/java-examples/example21/MyParser.g4
parser grammar MyParser;    			

options { tokenVocab=MyLexer; }			

document  : (header rows pairs)+ EOF ;
header    : field (COMMA field)* NL ;
rows      : (row)* ;	
row       :	field (COMMA field)* NL ;
field     : STRING | DASH ;

pairs     : (pair)* ;
pair      : key EQ value NL2;
key       : KEY ;
value     : VALUE ;		
